mobile.css
/* ... */
/* <!-- Popup Styles Starts Here --> */
.popup-div {
  position: absolute;
  top: 3%;
  width: 100vw;
  height: auto;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1000;
  transition: all 0.3s ease;
  backdrop-filter: blur(5px);
}

.pop-content {
  background-color: white;
  padding: 1.25em;
  max-width: 90%;
  max-height: 90%;
  overflow-y: auto;
  border-radius: 5px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
  position: relative;
  left: 5%;
}

.tittle-close {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.pop-close-btn {
  font-size: 1.5em;
  color: #67798e;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.pop-title {
  width: 100%;
  margin-top: 0;
  padding-bottom: 10%;
  font-family: 'Crete Round', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 2em;
  color: #172b4d;
}

.flex-img_descrip_btns {
  width: 100%;
  height: auto;
}

.flex-descrip-btn {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  height: auto;
}

.pop-img {
  width: 100%;
  height: auto;
  margin-bottom: 1.25em;
}

.pop-descrip {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 1em;
  line-height: 1.5em;
  color: #344563;
}

.pop-btns {
  padding-top: 5%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.pop-tech {
  list-style: none;
  margin: 0;
  padding: 0;
  margin-bottom: 7%;
  display: flex;
  flex-wrap: wrap;
  gap: 5%;
}

.popup__technologies a {
  width: 100%;
  height: auto;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 0.75em;
  line-height: 1em;
  color: #3c3a39;
}

.pop-html,
.pop-boot,
.pop-ruby {
  border: 2px solid #979493;
  height: 2.25em;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0.625em 0.75em;
}

.pop-btn {
  width: 8.375em;
  height: 3em;
  padding: 2%;
  color: white;
  background-color: #ff6b00;
  border-radius: 5px;
  text-decoration: none;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 1.063em;
  line-height: 1.5em;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.pop-container {
  display: none;
}
/* <!-- Popup Styles Ends Here --> */

